<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:visibility="gone">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/group_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/group_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/connect_peer_button"
                android:background="@color/colorLightBlue"
                android:textColor="@color/colorPureWhite"/>

            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_peer_button"
                android:background="@color/colorLightBlue"
                android:textColor="@color/colorPureWhite"/>

            <Button
                android:id="@+id/btn_choose_file"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/choose_file_button"
                android:background="@color/colorLightBlue"
                android:textColor="@color/colorPureWhite"/>

            <Button
                android:id="@+id/btn_send_file"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/send_file_button"
                android:visibility="gone"
                android:background="@color/colorLightBlue"
                android:textColor="@color/colorPureWhite"/>


        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <TextView
                android:id="@+id/message_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </ScrollView>




        <LinearLayout
            android:id="@+id/message_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">


            <EditText
                android:id="@+id/message_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_send"
                android:background="@color/colorLightBlue"
                android:textColor="@color/colorPureWhite"/>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>
